--- a/releases/stg/podinfo.yaml
+++ b/releases/stg/podinfo.yaml
@@ -10,11 +10,11 @@ metadata:
 spec:
   releaseName: podinfo-rc
   chart:
-    git: git@github.com:stefanprodan/gitops-helm
+    git: git@github.com:petergledhill/gitops-helm
     path: charts/podinfo
     ref: master
   values:
-    image: stefanprodan/podinfo:stg-9ij63o4c
+    image: petergledhill/podinfo:stg-9ij63o4c
     replicaCount: 2
     hpa:
       enabled: true
