--- a/charts/podinfo-v1/values.yaml
+++ b/charts/podinfo-v1/values.yaml
@@ -11,7 +11,7 @@ faults:
   error: false
 
 image:
-  repository: quay.io/petergledhill/podinfo
+  repository: quay.io/stefanprodan/podinfo
   tag: 1.2.1
   pullPolicy: IfNotPresent
 
