--- a/charts/podinfo/Chart.yaml
+++ b/charts/podinfo/Chart.yaml
@@ -3,10 +3,10 @@ appVersion: "0.4.0"
 description: Podinfo Helm chart for Kubernetes
 name: podinfo
 version: 0.2.1
-home: https://github.com/petergledhill/k8s-podinfo
+home: https://github.com/stefanprodan/k8s-podinfo
 sources:
-- https://github.com/petergledhill/k8s-podinfo
+- https://github.com/stefanprodan/k8s-podinfo
 maintainers:
-  - name: petergledhill
-    email: petergledhill@users.noreply.github.com
+  - name: stefanprodan
+    email: stefanprodan@users.noreply.github.com
 engine: gotpl
