--- a/releases/prod/podinfo.yaml
+++ b/releases/prod/podinfo.yaml
@@ -10,9 +10,9 @@ metadata:
 spec:
   releaseName: podinfo-prod
   chart:
-    git: git@github.com:petergledhill/gitops-helm
+    git: git@github.com:stefanprodan/gitops-helm
     path: charts/podinfo
     ref: master
   values:
-    image: petergledhill/podinfo:0.4.11
+    image: stefanprodan/podinfo:0.4.11
     replicaCount: 3
